--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3328,7 +3328,7 @@ canvas {
 
     /* ------ Contact Form ------ */
    #msgss {
-    color: #2f2f2f;
+    color: #d4d4d4;
     margin-top: 10px;
     display: block;
    }
